Adding css up to hero section

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </head>
 <body>
     <!-- Header Section -->
-    <header>
-        <div>MyApp</div>
-        <nav>
+    <header class="header">
+        <div class="logo">MyApp</div>
+        <nav class="nav">
             <a href="#">Home</a>
             <a href="#">Feature</a>
             <a href="#">Pricing</a>
@@ -29,7 +29,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section>
+    <section class="hero">
         <div>
             <h1>Welcome To MyApp</h1>
             <p>Grow your business with our app. Experience the power of technology.</p>
