--- a/index.html
+++ b/index.html
@@ -30,68 +30,68 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div>
+        <div class="hero-content">
             <h1>Welcome To MyApp</h1>
             <p>Grow your business with our app. Experience the power of technology.</p>
-            <a href="#">Get Started</a>
+            <a href="#" class="btn">Get Started</a>
         </div>
-        <img src="./banner.png" alt="App preview" class="" >
+        <img src="./banner.png" alt="App preview" class="hero-img" >
     </section>
 
     <!-- Feature Section -->
-    <section>
-        <div>
+    <section class="features">
+        <div class="feature-box">
             <h3>Fast Performance</h3>
             <p>Our app is optimized for speed and efficiency.</p>
         </div>
-        <div>
+        <div class="feature-box">
             <h3>Secure Data</h3>
             <p>We provide top-notch security for your data.</p>
         </div>
-        <div>
+        <div class="feature-box">
             <h3>24/7 Support</h3>
             <p>Our team is available anytime for your support.</p>
         </div>
     </section>
 
     <!-- Pricing Section -->
-    <section>
-        <div>
+    <section class="pricing">
+        <div class="plan">
             <h3>Basic</h3>
-            <p>$9.99 / month</p>
-            <div>
-                <p><i></i>5gb Storage</p>
-                <p><i></i>Basic Support</p>
-                <p><i></i>Custom Branding</p>
-                <p><i></i>Advanced Analytics</p>
+            <p class="price">$9.99 / month</p>
+            <div class="features-list">
+                <p><i class="fa-solid fa-check text-green"></i>5gb Storage</p>
+                <p><i class="fa-solid fa-check text-green"></i>Basic Support</p>
+                <p><i class="fa-solid fa-xmark text-red"></i>Custom Branding</p>
+                <p><i class="fa-solid fa-xmark text-red"></i>Advanced Analytics</p>
             </div>
         </div>
 
-        <div>
+        <div class="plan">
             <h3>Pro</h3>
-            <p>$19.99 / month</p>
-            <div>
-                <p><i></i>50gb Storage</p>
-                <p><i></i>Priority Support</p>
-                <p><i></i>Custom Branding</p>
-                <p><i></i>Advanced Analytics</p>
+            <p class="price">$19.99 / month</p>
+            <div class="features-list">
+                <p><i class="fa-solid fa-check text-green"></i>50gb Storage</p>
+                <p><i class="fa-solid fa-check text-green"></i>Priority Support</p>
+                <p><i class="fa-solid fa-check text-green"></i>Custom Branding</p>
+                <p><i class="fa-solid fa-xmark text-red"></i>Advanced Analytics</p>
             </div>
         </div>
 
-        <div>
+        <div class="plan">
             <h3>Enterprise</h3>
-            <p>$49.99 / month</p>
-            <div>
+            <p class="price">$49.99 / month</p>
+            <div class="features-list">
                 <p><i class="fa-solid fa-check text-green"></i>Unlimited Storage</p>
-                <p><i></i>24/7 Support</p>
-                <p><i></i>Custom Branding</p>
-                <p><i></i>Advanced Analytics</p>
+                <p><i class="fa-solid fa-check text-green"></i>24/7 Support</p>
+                <p><i class="fa-solid fa-check text-green"></i>Custom Branding</p>
+                <p><i class="fa-solid fa-check text-green"></i>Advanced Analytics</p>
             </div>
         </div>
     </section>
 
     <!-- Footer Section -->
-    <footer>
+    <footer class="footer">
         <p>© 2025 MyApp. All right reserved</p>
         <p>Contact: soroarjahan17@gmail.com</p>
     </footer>
